atualização conforme sharepoint

--- a/05_re-design_materiais/index.html
+++ b/05_re-design_materiais/index.html
@@ -265,7 +265,7 @@
                             </div>
                             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                               <div class="panel-body">
-                                <p>Envolve a criação de móveis sob medida ou a modificação de peças existentes para se adequar ao espaço e atender às preferências do cliente em relação a materiais, cores, formas e funcionalidades específicas.</p>
+                                Envolve a criação de móveis sob medida ou a modificação de peças existentes para se adequar ao espaço e atender às preferências do cliente em relação a materiais, cores, formas e funcionalidades específicas.
                               </div>
                             </div>
                           </div>
@@ -279,7 +279,7 @@
                             </div>
                             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                               <div class="panel-body">
-                                <p>A personalização do <i>layout</i> inclui a adaptação do espaço de acordo com as necessidades e rotinas dos moradores. Pode envolver a redistribuição de paredes, a criação de ambientes abertos ou integrados e a otimização do fluxo de circulação.</p>
+                                A personalização do <i>layout</i> inclui a adaptação do espaço de acordo com as necessidades e rotinas dos moradores. Pode envolver a redistribuição de paredes, a criação de ambientes abertos ou integrados e a otimização do fluxo de circulação.
                               </div>
                             </div>
                           </div>
@@ -293,7 +293,7 @@
                             </div>
                             <div id="collapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading3">
                               <div class="panel-body">
-                                <p>Permite ao cliente selecionar os materiais e acabamentos que melhor se alinham ao seu estilo, como pisos, revestimentos, pinturas, papéis de parede, entre outros.</p>
+                                Permite ao cliente selecionar os materiais e acabamentos que melhor se alinham ao seu estilo, como pisos, revestimentos, pinturas, papéis de parede, entre outros.
                               </div>
                             </div>
                           </div>
@@ -307,8 +307,8 @@
                             </div>
                             <div id="collapse5" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading5">
                               <div class="panel-body">
-                                <p>A customização também inclui a incorporação de objetos decorativos, arte e itens pessoais que representem a história, memórias e preferências do cliente, tornando o ambiente mais acolhedor e autêntico.</p>
-                                <img src="imgs/figura_4.jpg" class="center-block img-responsive hidden-sm hidden-xs w-50" alt="Na imagem há um antigo receptor de rádio de luxo. Sobre ele há um pequeno vaso de flores em metal, com flores delicadas na cor roxa. Atrás do móvel há um fundo escuro e o piso é de madeira, com tapete acinzentado próximo ao receptor.">
+                                A customização também inclui a incorporação de objetos decorativos, arte e itens pessoais que representem a história, memórias e preferências do cliente, tornando o ambiente mais acolhedor e autêntico.
+                                <img src="imgs/figura_4.jpg" class="center-block img-responsive hidden-sm hidden-xs" alt="Na imagem há um antigo receptor de rádio de luxo. Sobre ele há um pequeno vaso de flores em metal, com flores delicadas na cor roxa. Atrás do móvel há um fundo escuro e o piso é de madeira, com tapete acinzentado próximo ao receptor.">
                                 <p class="no-print visible-sm visible-xs" aria-hidden="true">Toque na imagem para ampliá-la.</p>
                                 <a href="imgs/figura_4.jpg" target="_blank" class="no-print visible-sm visible-xs" aria-hidden="true"><img src="imgs/figura_4.jpg" class="center-block img-responsive" alt="Na imagem há um antigo receptor de rádio de luxo. Sobre ele há um pequeno vaso de flores em metal, com flores delicadas na cor roxa. Atrás do móvel há um fundo escuro e o piso é de madeira, com tapete acinzentado próximo ao receptor. "></a>
                                 <p class="legenda-imagem">
