--- a/08_urban_jungle/index.html
+++ b/08_urban_jungle/index.html
@@ -91,7 +91,7 @@
             <p>A vida moderna nos centros urbanos é demarcada pela progressiva imersão das pessoas ao concreto e à tecnologia. A busca pela natureza, em meio às cidades, surgiu como uma alternativa em prol de qualidade de vida.</p>
             <p>Segundo Ferreira (2005), a vida nas grandes cidades possibilita oportunidades, ao mesmo tempo que tem desvantagens, como poluição, violência urbana e estresse, o que afeta diretamente a qualidade de vida dos habitantes.</p>
             <p>Diante disso, surge o conceito de <i>urban jungle</i>, também chamado de “selva urbana”, um estilo de decoração que tem o objetivo de trazer a natureza para dentro dos lares de maneira harmoniosa e integrada à decoração.</p>
-            <img src="imgs/figura_01.jpg" class="img-responsive center-block w-50">
+            <img src="imgs/figura_01.jpg" class="img-responsive center-block">
             <p class="legenda-imagem">
               <i>Urban jungle</i> aplicada em uma sala residencial <br>
               Fonte: Pexels (2023)
@@ -110,7 +110,7 @@
             <p>O efeito é dado pelo <i>mix</i> de folhagens em diferentes tamanhos e volumes, dispostos em vasos apoiados em móveis, pendentes ou no chão. O importante é fazer escolhas de espécies que apresentem diferentes alturas e texturas para gerar naturalidade na composição.</p>
             <p>Além das plantas, o conceito incorpora móveis e revestimentos em madeira, fibras naturais, pedras e outros materiais orgânicos. A decoração remete a elementos naturais por meio de estampas, quadros, ilustrações e tapeçarias. Tudo isso aliado ao uso de cores neutras, como tons de verde, marrom, bege e branco, que têm a função de destacar as plantas e criar uma sensação de tranquilidade e equilíbrio.</p>
             <p>Esses componentes desempenham um papel significativo ao otimizar a conexão com a natureza, criando uma atmosfera serena e acolhedora.</p>
-            <img src="imgs/figura_02.jpg" class="img-responsive center-block w-50">
+            <img src="imgs/figura_02.jpg" class="img-responsive center-block">
             <p class="legenda-imagem">
               Composição vegetal <br>
               Fonte: Pexels (2023)
@@ -128,7 +128,7 @@
             <h3>Benefícios</h3>
             <p>O contato com a natureza transmite paz e harmonia, além de estar relacionado com sensações de satisfação e estímulo dos sentidos, que são fundamentais para fornecer mais saúde e qualidade de vida.</p>
             <p>De acordo com Becker <i>et al</i>. (2019), estudos científicos demonstram que o contato com a natureza afeta a saúde física e emocional, tendo o poder de minimizar efeitos maléficos do cotidiano.</p>
-            <img src="imgs/figura_03.jpg" class="img-responsive center-block w-50">
+            <img src="imgs/figura_03.jpg" class="img-responsive center-block">
             <p class="legenda-imagem">
               Moradora lendo rodeada de plantas <br>
               Fonte: Pexels (2023)
@@ -171,7 +171,7 @@
                       <p class="acessivel no-print">A imagem mostra uma sala com sofá de couro marrom, rede de tecido natural e pufe de sisal. A sala está rodeada por muitas plantas em diferentes espécies, formatos e volumes, apoiadas em prateleiras, no parapeito da janela, no piso e pendentes no teto.</p>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                      <button type="button" class="btn borda-primaria-03" data-dismiss="modal">Fechar</button>
                     </div>
                   </div>
                 </div>
@@ -193,7 +193,7 @@
                       <p class="acessivel no-print">A imagem mostra um dormitório com cama e mesas de cabeceira cercadas de espécies vegetais no entorno.</p>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                      <button type="button" class="btn borda-primaria-03" data-dismiss="modal">Fechar</button>
                     </div>
                   </div>
                 </div>
@@ -215,7 +215,7 @@
                       <p class="acessivel no-print">A imagem mostra uma cozinha com plantas pendentes.</p>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                      <button type="button" class="btn borda-primaria-03" data-dismiss="modal">Fechar</button>
                     </div>
                   </div>
                 </div>
@@ -237,7 +237,7 @@
                       <p class="acessivel no-print">A imagem mostra um home office com mesa e computador, rodeados de espécies vegetais volumosas e destacando-se no entorno.</p>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                      <button type="button" class="btn borda-primaria-03" data-dismiss="modal">Fechar</button>
                     </div>
                   </div>
                 </div>
@@ -259,7 +259,7 @@
                       <p class="acessivel no-print">A imagem mostra um banheiro com uma banheira próxima à janela e rodeada por plantas.</p>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                      <button type="button" class="btn borda-primaria-03" data-dismiss="modal">Fechar</button>
                     </div>
                   </div>
                 </div>
@@ -447,7 +447,7 @@
               <p>Ж: Tóxicas</p>
             </div>
             <p>O sucesso no cultivo de plantas em ambientes internos requer uma minuciosa análise de fatores essenciais, com destaque especial para a luminosidade. As plantas podem ser categorizadas conforme suas necessidades de luz, variando entre aquelas que requerem intensidade elevada, moderada ou baixa. Como resultado, a escolha da espécie e seu posicionamento dependem das características específicas do espaço, incluindo a presença ou ausência de luz solar direta proveniente das janelas. Em certos casos, pode se tornar essencial complementar a iluminação natural por meio de lâmpadas LED (diodo emissor de luz) especialmente projetadas para o cultivo vegetal.</p>
-            <img src="imgs/figura_09.jpg" class="img-responsive center-block w-70">
+            <img src="imgs/figura_09.jpg" class="img-responsive center-block">
             <p class="legenda-imagem">
               Composição vegetal em uma sala <br>
               Pexels (2023)
@@ -464,7 +464,7 @@
           <div class="container">
             <h3>Cuidados e manutenção</h3>
             <p>Alguns cuidados são necessários ao escolher as espécies vegetais para compor a <i>urban jungle</i>, principalmente em relação à toxidade. Algumas plantas podem ser tóxicas se ingeridas e representar um risco para a saúde dos animais ou das crianças, por isso, é importante certificar-se de escolher plantas seguras para o ambiente em que serão colocadas. Se não houver animais de estimação ou crianças em casa, tenha em mente que a classificação de uma planta como tóxica não implica que sua convivência seja prejudicial.</p>
-            <img src="imgs/figura_10.jpg" class="img-responsive center-block w-70">
+            <img src="imgs/figura_10.jpg" class="img-responsive center-block">
             <p class="legenda-imagem">
               Cuidados e convívio com plantas <br>
               Pexels (2023)
@@ -502,7 +502,7 @@
               <h4>Podas</h4>
               <p>A realização de <b>podas</b> e a remoção de folhas secas ou doentes devem ocorrer regularmente, tal como a seleção de substrato e a aplicação de adubos apropriados, uma vez que viabilizam o aporte de nutrientes vitais ao crescimento. Isso deve ser aliado ao procedimento de transplante, que se faz necessário conforme o crescimento das plantas, que acabam necessitando de espaço adicional para suas raízes. </p>
             </div>
-            <img src="imgs/figura_11.jpg" class="img-responsive center-block w-70">
+            <img src="imgs/figura_11.jpg" class="img-responsive center-block">
             <p class="legenda-imagem">
               Manutenção de plantas <br>
               Pexels (2023)
@@ -532,7 +532,7 @@
               <img src="imgs/plantas_infografico.png" class="no-print">
             </div>
             
-            <img src="imgs/figura_12.jpg" class="img-responsive center-block w-50">
+            <img src="imgs/figura_12.jpg" class="img-responsive center-block">
             <p class="legenda-imagem">
               Cultivo de plantas <br>
               Pexels (2023)
