--- a/11_projeto_jardinismo/index.html
+++ b/11_projeto_jardinismo/index.html
@@ -202,7 +202,7 @@
                   <p>Figueiredo (2021) indica que, se não houver a possibilidade de incidência de luz natural, o uso da luz artificial pode ser utilizada, controlando também o crescimento dessa espécie e variando a intensidade da luz.</p>
                   <p>Caso a demanda do cliente seja para um jardim interno, mas não haja uma área própria para incluir a vegetação, uma possibilidade é o uso de jardins verticais, que não ocupam muito espaço. A vantagem deles é que podem ser dispostos em um local residencial ou em ambientes comerciais, como lojas e restaurantes. No entanto, é preciso ter atenção quanto à fixação desse jardim vertical (se for um jardim vertical grande) devido à possível sobrecarga do peso. Nesse caso, é interessante conversar com um profissional parceiro, engenheiro ou arquiteto para verificar essa possibilidade.</p>
                   <p>Também será necessário perceber a luminosidade do ambiente e a possibilidade de colocar jardim em um local que receba luz, direta ou indireta, até mesmo para análise das espécies a serem trabalhadas.</p>
-                  <img src="objetos/Figura02.jpg" class="img-responsive center-block borda-imagem w-70">
+                  <img src="objetos/Figura02.jpg" class="img-responsive center-block borda-imagem">
                   <p class="legenda-imagem">
                     Jardim vertical<br>
                     Fonte: Czerwinski (2018)
@@ -245,7 +245,7 @@
                   <p>É a etapa que sucede o estudo preliminar e nela se trabalha com a estruturação dos espaços, dos volumes e das áreas ocupadas. É o momento de planejar pontos focais, acessos, aproveitamento da vista e volumetria, com os primeiros esboços de organização do espaço.</p>
                   <p>Niemeyer (2019) afirma que durante o estudo de massa é necessário pensar no volume do vegetal e qual o seu porte e diâmetro em um primeiro momento.</p>
                   <p>Em espaços internos, as plantas em vasos trabalham o apelo visual, tornando um lugar com diferencial e também mais aconchegante. Na escolha de uma planta para espaços internos, é vantajoso trabalhar com as texturas das folhas ou até das flores, trazendo contraste para a decoração, mas sempre com cautela para as condições de luminosidade, umidade e cuidado diário.</p>
-                  <img src="objetos/Figura03.jpg" class="img-responsive center-block borda-imagem w-70">
+                  <img src="objetos/Figura03.jpg" class="img-responsive center-block borda-imagem">
                   <p class="legenda-imagem">
                     Composição do espaço com espécies diferentes<br>
                     Fonte: Freepik (2023)
@@ -395,7 +395,7 @@
                         <div id='collapse06' class='panel-collapse collapse' role='tabpanel' aria-labelledby='heading06'>
                           <div class='panel-body'>
                             <p>Movimento criado pelas proporções (altura e textura) que sugere uma percepção diferenciada: alturas iguais = mais formal e sem movimento; alturas variadas = informalidade.</p>
-                            <img src="objetos/Figura10.jpg" class="img-responsive center-block borda-imagem w-35">
+                            <img src="objetos/Figura10.jpg" class="img-responsive center-block borda-imagem w-5">
                             <p class="legenda-imagem">
                               Ritmo<br>
                               Fonte: Pexels (2023)
@@ -415,7 +415,7 @@
                         <div id='collapse07' class='panel-collapse collapse' role='tabpanel' aria-labelledby='heading07'>
                           <div class='panel-body'>
                             <p>Um ponto focal no ambiente para quebrar a monotonia, destacar uma planta ou o vaso devido a porte, coloração, textura ou estrutura deste.</p>
-                            <img src="objetos/Figura11.jpg" class="img-responsive center-block borda-imagem w-35">
+                            <img src="objetos/Figura11.jpg" class="img-responsive center-block borda-imagem w-5">
                             <p class="legenda-imagem">
                               Ênfase da planta<br>
                               Fonte: Pexels (2023)
@@ -517,7 +517,7 @@
                 <div id="t6">
                   <h3>Estudo preliminar</h3>
                   <p>É o momento de interpretar as informações recolhidas nas etapas anteriores, definindo, a partir de alguns esboços, os planos de massas. É também o momento de analisar a zona a ser projetada de acordo com as funções desejadas ao ambiente.</p>
-                  <img src="objetos/Figura12.jpg" class="img-responsive center-block borda-imagem w-70">
+                  <img src="objetos/Figura12.jpg" class="img-responsive center-block borda-imagem">
                   <p class="legenda-imagem">
                     Estudo preliminar de um jardim interno<br>
                     Fonte: SAAB (s. d.)
@@ -553,7 +553,7 @@
                 <div id="t8">
                   <h3>Projeto executivo de plantio</h3>
                   <p>Com base em todas as etapas inicia-se o projeto executivo, com plantas baixas e cortes e detalhando todas as escolhas feitas. Olivo e Mano (2019) salientam que nessa etapa entram os desenhos técnicos, que possibilitam o posicionamento das espécies no local em que serão implementadas.</p>
-                  <img src="objetos/Figura15.jpg" class="img-responsive center-block borda-imagem w-70">
+                  <img src="objetos/Figura15.jpg" class="img-responsive center-block borda-imagem">
                   <p class="legenda-imagem">
                     Projeto executivo<br>
                     Fonte: Bauer (c2012)
