ajuste imagens e selo

--- a/11_projeto_jardinismo/index.html
+++ b/11_projeto_jardinismo/index.html
@@ -192,7 +192,7 @@
                   <p>É a fase da pesquisa, analisando todas a informações possíveis a respeito do espaço a ser trabalhado. Aconselha-se que esta etapa seja feita <i>in loco</i> para que se conheça o ambiente. O local tem incidência de luz natural? O ambiente é iluminado pelo sol? A luz solar ilumina diretamente o espaço? A luz solar será a do horário da manhã ou da tarde? Como é a ventilação? Há ventilação natural? A luminosidade, a ventilação e o tempo disponível para o cuidado dessa vegetação são essenciais.</p>
                   <p>Esta fase corresponde também a conhecer o local a ser trabalhado, considerando as características físicas do espaço: os móveis que já estão no ambiente, a altura do pé direito, a posição das aberturas como portas e janelas, a ventilação do espaço e a incidência de luz solar no ambiente.</p>
                   <p>Lembre-se de que, em se tratando de um espaço interno, deve-se escolher espécies de plantas que se adaptem à sombra. Entenda que, em ambientes internos, as condições de iluminação variam muito. Figueiredo (2021) complementa que, no início e no final do dia, a possibilidade de entrada do sol, por estar mais baixo, é grande, desde que se abram as portas e janelas. Já ao meio-dia, com o sol perpendicular, dependendo do espaço a ser trabalhado, não há certeza de que as plantas receberão luz solar.</p>
-                  <img src="objetos/Figura01.PNG" class="img-responsive center-block borda-imagem">
+                  <img src="objetos/Figura01.png" class="img-responsive center-block borda-imagem">
                   <p class="legenda-imagem">
                     Trajetória solar em um dia<br>
                     Fonte: Figueiredo (2021, p. 26)
@@ -322,9 +322,9 @@
                             </p>
                             <p class="acessivel no-print">Na imagem aparecem três vasos, sendo o primeiro um vaso mais baixo, de cor terrosa e feito em um material mais áspero, indicando a proporção com um círculo no vaso e outro círculo em cima. O segundo vaso é mais longo, em tom claro e com textura, indicando dois círculos na medida do vaso e mais um círculo sobre o vaso, representando a proporção. O terceiro vaso tem tom terroso e textura de barro, indicando um círculo no vaso e mais dois círculos em cima.</p>
                             <div class="div-fig07">
-                                <img src="objetos/Figura07_1.PNG" class="">
-                                <img src="objetos/Figura07_2.PNG" class="">
-                                <img src="objetos/Figura07_3.PNG" class="">
+                                <img src="objetos/Figura07_1.png" class="">
+                                <img src="objetos/Figura07_2.png" class="">
+                                <img src="objetos/Figura07_3.png" class="">
                             </div>
                             <p class="legenda-imagem">
                               Plantas e a composição<br>
@@ -345,7 +345,7 @@
                         <div id='collapse04' class='panel-collapse collapse' role='tabpanel' aria-labelledby='heading04'>
                           <div class='panel-body'>
                             <p>Pode ser compreendida como planta e vaso ou como plantas e vasos em conjunto, mas com plantios separados. Em varandas, a atração visual é maior devido à paisagem no entorno.</p>
-                            <img src="objetos/Figura08.PNG" class="img-responsive center-block">
+                            <img src="objetos/Figura08.png" class="img-responsive center-block">
                             <p class="legenda-imagem">
                               Composição com vasos e plantas diferentes<br>
                               Fonte: Niemeyer (2019, p. 78)
@@ -454,13 +454,13 @@
                     <p class="acessivel no-print">Na imagem aparecem três vasos, sendo o primeiro um vaso mais baixo, de cor terrosa e feito em um material mais áspero, indicando a proporção com um círculo no vaso e outro círculo em cima. O segundo vaso é mais longo, em tom claro e com textura, indicando dois círculos na medida do vaso e mais um círculo sobre o vaso, representando a proporção. O terceiro vaso tem tom terroso e textura de barro, indicando um círculo no vaso e mais dois círculos em cima.</p>
                     <div class="row">
                       <div class="col-sm-4 col-xs-12">
-                        <img src="objetos/Figura07_1.PNG" class="img-responsive center-block" alt="Boa proporção entre planta e vaso. A forração da base atenua o caule fino da Palmeira Raphis dando movimento e uma percepção alegre.">
+                        <img src="objetos/Figura07_1.png" class="img-responsive center-block" alt="Boa proporção entre planta e vaso. A forração da base atenua o caule fino da Palmeira Raphis dando movimento e uma percepção alegre.">
                       </div>
                       <div class="col-sm-4 col-xs-12">
-                        <img src="objetos/Figura07_2.PNG" class="img-responsive center-block" alt="A mesma Palmeira Raphis, plantada isoladamente (sem forração de base) só com argila expandida sobre a terra: cria uma percepção fria e vazia.">
+                        <img src="objetos/Figura07_2.png" class="img-responsive center-block" alt="A mesma Palmeira Raphis, plantada isoladamente (sem forração de base) só com argila expandida sobre a terra: cria uma percepção fria e vazia.">
                       </div>
                       <div class="col-sm-4 col-xs-12">
-                        <img src="objetos/Figura07_3.PNG" class="img-responsive center-block" alt="Total desproporção entre planta e vaso. O peso visual (e físico) do vaso excede muito o da planta, causando desequilíbrio.">
+                        <img src="objetos/Figura07_3.png" class="img-responsive center-block" alt="Total desproporção entre planta e vaso. O peso visual (e físico) do vaso excede muito o da planta, causando desequilíbrio.">
                       </div>
                     </div>
                     <p class="legenda-imagem">
@@ -470,7 +470,7 @@
                     <p class="acessivel no-print">Complementando a descrição, o vaso que aparece nas imagens é arredondado e, na primeira imagem, aparecem duas espécies de plantas, sendo uma mais alta e uma mais rasteira. Na segunda imagem, também no vaso arredondado, há apenas uma espécie de planta, que também estava na imagem anterior. Na terceira imagem há um vaso circular, apenas com a espécie rasteira da planta. A imagem é um croqui em preto e branco.</p>
                     <h4>Unidade</h4>
                     <p>Pode ser compreendida como planta e vaso ou como plantas e vasos em conjunto, mas com plantios separados. Em varandas, a atração visual é maior devido à paisagem no entorno.</p>
-                    <img src="objetos/Figura08.PNG" class="img-responsive center-block" alt="Mesmo sem rigor, é possível perceber uma composição com vasos de diferentes tamanhos e com diferentes portes de plantas.">
+                    <img src="objetos/Figura08.png" class="img-responsive center-block" alt="Mesmo sem rigor, é possível perceber uma composição com vasos de diferentes tamanhos e com diferentes portes de plantas.">
                     <p class="legenda-imagem">
                       Composição com vasos e plantas diferentes<br>
                       Fonte: Niemeyer (2019, p. 78)
@@ -572,8 +572,8 @@
                       </ol>
                       <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                          <img src="objetos/Figura16_1.PNG" class="img-responsive center-block borda-imagem hidden-sm hidden-xs">
-                          <a href="objetos/Figura16_1.PNG" target="_blank" class="visible-sm visible-xs"><img src="objetos/Figura16_1.PNG" class="center-block img-responsive"></a>
+                          <img src="objetos/Figura16_1.png" class="img-responsive center-block borda-imagem hidden-sm hidden-xs">
+                          <a href="objetos/Figura16_1.png" target="_blank" class="visible-sm visible-xs"><img src="objetos/Figura16_1.png" class="center-block img-responsive"></a>
                         </div>
                         <div class="item">
                           <img src="objetos/Figura16_2.jpg" class="img-responsive center-block borda-imagem hidden-sm hidden-xs">
@@ -605,7 +605,7 @@
                   <p>Ao indicar o nome da planta, lembre-se de ser o mais específico possível, utilizando o nome científico completo, pois apenas o primeiro nome pode gerar certa confusão na escolha das espécies. Observe estas plantas e note a diferença nas folhas e nas cores, apesar de todas serem conhecidas como fícus:</p>
                   <div class="row">
                     <div class="col-sm-12 col-xs-12">
-                      <img src="objetos/Figura17_1.PNG" class="img-responsive center-block">
+                      <img src="objetos/Figura17_1.png" class="img-responsive center-block">
                       <p class="acessivel no-print">
                         Nome científico: fícus elástica rubro <br>
                         Nome popular: ruby tricolor, falsa-seringueira, árvore-da-borracha <br>
@@ -613,7 +613,7 @@
                       </p>
                     </div>
                     <div class="col-sm-12 col-xs-12">
-                      <img src="objetos/Figura17_2.PNG" class="img-responsive center-block">
+                      <img src="objetos/Figura17_2.png" class="img-responsive center-block">
                       <p class="acessivel no-print">
                         Nome científico: fícus lyrata <br>
                         Nome popular: figueira lira <br>
@@ -621,7 +621,7 @@
                       </p>
                     </div>
                     <div class="col-sm-12 col-xs-12">
-                      <img src="objetos/Figura17_3.PNG" class="img-responsive center-block">
+                      <img src="objetos/Figura17_3.png" class="img-responsive center-block">
                       <p class="acessivel no-print">
                         Nome científico: fícus elástica tricolor <br>
                         Nome popular: ruby tricolor, falsa-seringueira, árvore-da-borracha <br>
