--- a/02_sustentabilidade_nos_ambientes/index.html
+++ b/02_sustentabilidade_nos_ambientes/index.html
@@ -1032,7 +1032,7 @@
                 </style>
                 <a href="objetos/casa-sustentavel/index.html" target="_blank" style="margin: 0px; padding: 0px; text-decoration: none;">
                   <img src="imgs/bto-casa-sustentavel.png" class="bto-casa-se img-fluid" style="max-width: 350px !important; margin-left: auto; margin-right: auto; display: block;" alt="">
-                  <img src="imgs/selo-03.png" style="width: 120px;margin: -199px 120px 0;" alt="">
+                  <img src="imgs/selo-03.png" class="img-selo" style="" alt="">
                 </a>
 
               </div>
