--- a/11_projeto_jardinismo/index.html
+++ b/11_projeto_jardinismo/index.html
@@ -322,9 +322,9 @@
                             </p>
                             <p class="acessivel no-print">Na imagem aparecem três vasos, sendo o primeiro um vaso mais baixo, de cor terrosa e feito em um material mais áspero, indicando a proporção com um círculo no vaso e outro círculo em cima. O segundo vaso é mais longo, em tom claro e com textura, indicando dois círculos na medida do vaso e mais um círculo sobre o vaso, representando a proporção. O terceiro vaso tem tom terroso e textura de barro, indicando um círculo no vaso e mais dois círculos em cima.</p>
                             <div class="div-fig07">
-                                <img src="objetos/Figura07_1.PNG" class="">
-                                <img src="objetos/Figura07_2.PNG" class="">
-                                <img src="objetos/Figura07_3.PNG" class="">
+                                <img src="objetos/f071.jpg" class="">
+                                <img src="objetos/f072.jpg" class="">
+                                <img src="objetos/f073.jpg" class="">
                             </div>
                             <p class="legenda-imagem">
                               Plantas e a composição<br>
@@ -454,13 +454,13 @@
                     <p class="acessivel no-print">Na imagem aparecem três vasos, sendo o primeiro um vaso mais baixo, de cor terrosa e feito em um material mais áspero, indicando a proporção com um círculo no vaso e outro círculo em cima. O segundo vaso é mais longo, em tom claro e com textura, indicando dois círculos na medida do vaso e mais um círculo sobre o vaso, representando a proporção. O terceiro vaso tem tom terroso e textura de barro, indicando um círculo no vaso e mais dois círculos em cima.</p>
                     <div class="row">
                       <div class="col-sm-4 col-xs-12">
-                        <img src="objetos/Figura07_1.PNG" class="img-responsive center-block" alt="Boa proporção entre planta e vaso. A forração da base atenua o caule fino da Palmeira Raphis dando movimento e uma percepção alegre.">
+                        <img src="objetos/f071.jpg" class="img-responsive center-block" alt="Boa proporção entre planta e vaso. A forração da base atenua o caule fino da Palmeira Raphis dando movimento e uma percepção alegre.">
                       </div>
                       <div class="col-sm-4 col-xs-12">
-                        <img src="objetos/Figura07_2.PNG" class="img-responsive center-block" alt="A mesma Palmeira Raphis, plantada isoladamente (sem forração de base) só com argila expandida sobre a terra: cria uma percepção fria e vazia.">
+                        <img src="objetos/f072.jpg" class="img-responsive center-block" alt="A mesma Palmeira Raphis, plantada isoladamente (sem forração de base) só com argila expandida sobre a terra: cria uma percepção fria e vazia.">
                       </div>
                       <div class="col-sm-4 col-xs-12">
-                        <img src="objetos/Figura07_3.PNG" class="img-responsive center-block" alt="Total desproporção entre planta e vaso. O peso visual (e físico) do vaso excede muito o da planta, causando desequilíbrio.">
+                        <img src="objetos/f073.jpg" class="img-responsive center-block" alt="Total desproporção entre planta e vaso. O peso visual (e físico) do vaso excede muito o da planta, causando desequilíbrio.">
                       </div>
                     </div>
                     <p class="legenda-imagem">
